--- a/products.html
+++ b/products.html
@@ -50,13 +50,13 @@
             </button>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
-              <a href="cfcproduct.html">Carbon fiber composites</a>
-              <a href="cflproduct.html">Carbon fiber laminates</a>
-              <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
+              <a href="cfcproduct.html">Carbon Fiber Composites</a>
+              <a href="cflproduct.html">Carbon Fiber Laminates</a>
+              <a href="frpcproduct.html">Fiber Reinforced Polymer Composites</a>
               <span class="maintitle">Technical Fabrics & Yarns</span>
-              <a href="rfproduct.html">Reinforcement fabrics</a>
-              <a href="clfproduct.html">Coated and laminated fabrics</a>
-              <a href="syproduct.html">Spun yarn</a>
+              <a href="rfproduct.html">Reinforcement Fabrics</a>
+              <a href="clfproduct.html">Coated and Laminated Fabrics</a>
+              <a href="syproduct.html">Spun Yarn</a>
             </div>
           </div> 
         </li>
@@ -71,13 +71,13 @@
             <a href="products.html" title="Products" data-ripple="" class="menu-active"> Products</a>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
-              <a href="cfcproduct.html">Carbon fiber composites</a>
-              <a href="cflproduct.html">Carbon fiber laminates</a>
-              <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
+              <a href="cfcproduct.html">Carbon Fiber Composites</a>
+              <a href="cflproduct.html">Carbon Fiber Laminates</a>
+              <a href="frpcproduct.html">Fiber Reinforced Polymer Composites</a>
               <span class="maintitle">Technical Fabrics & Yarns</span>
-              <a href="rfproduct.html">Reinforcement fabrics</a>
-              <a href="clfproduct.html">Coated and laminated fabrics</a>
-              <a href="syproduct.html">Spun yarn</a>
+              <a href="rfproduct.html">Reinforcement Fabrics</a>
+              <a href="clfproduct.html">Coated and Laminated Fabrics</a>
+              <a href="syproduct.html">Spun Yarn</a>
             </div>
             <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
           </div>
@@ -96,7 +96,7 @@
     <span class="lineend"></span>
     <div class="card">
       <div class="title">
-        <span >Carbon fiber composites</span>
+        <span >Carbon Fiber Composites</span>
       </div>
       <div class="productcontent">
         <p>Carbon fibre composites are used in a range of high performance applications and is recognised for its excellent strength and stiffness compared to its weight.<p>
@@ -107,7 +107,7 @@
     </div>
     <div class="card">
       <div class="title">
-        <span >Carbon fiber laminates</span>
+        <span >Carbon Fiber Laminates</span>
       </div>
       <div class="productcontent">
         <p>Carbon fibre laminates finds itself in the field of robotics, UAV, drone structures, motorsport, marine, automation and medical fields. Laminates are specially developed to meet the most stringent repair and retrofitting standards.</p>
@@ -118,7 +118,7 @@
     </div>
     <div class="card">
       <div class="title">
-        <span >Fiber reinforced polymer composites</span>
+        <span >Fiber Reinforced Polymer Composites</span>
       </div>
       <div class="productcontent">
         <p>Composites are also made with fibres such as glass, Kevlar and other natural fibres. The use of these composite materials provide engineers the ability to tailor the combination of fibres and resin to meet the design requirement and performance.</p>
@@ -134,7 +134,7 @@
     <span class="lineend1"></span>
     <div class="card">
       <div class="title">
-        <span >Reinforcement fabrics</span>
+        <span >Reinforcement Fabrics</span>
       </div>
       <div class="productcontent">
         <p>Our range of woven reinforcement are lightweight yet sturdy with good fatigue and impact resistance. They are suitable for processing by all standard methods including wet-lay, vacuum bag and resin infusion and using all typical resin systems including epoxy, polyester and vinylester.</p>
@@ -145,7 +145,7 @@
     </div>
     <div class="card">
       <div class="title">
-        <span>Coated and laminated fabrics</span>
+        <span>Coated and Laminated Fabrics</span>
       </div>
       <div class="productcontent">
         <p>Coated and laminated fabrics are typically woven, knitted or non-woven textile fabrics which are combined with a thin, flexible film of a natural or synthetic polymeric substance to achieve desired property.</p>
@@ -156,7 +156,7 @@
     </div>
     <div class="card">
       <div class="title">
-        <span >Spun yarn</span>
+        <span >Spun Yarn</span>
       </div>
       <div class="productcontent">
         <p>Wide range of Technical yarns and sewing threads for high performance applications are made from synthetic and natural fibres.</p>
