--- a/rfproduct.html
+++ b/rfproduct.html
@@ -49,13 +49,13 @@
             </button>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
-              <a href="cfcproduct.html">Carbon fiber composites</a>
-              <a href="cflproduct.html">Carbon fiber laminates</a>
-              <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
+              <a href="cfcproduct.html">Carbon Fiber Composites</a>
+              <a href="cflproduct.html">Carbon Fiber Laminates</a>
+              <a href="frpcproduct.html">Fiber Reinforced Polymer Composites</a>
               <span class="maintitle">Technical Fabrics & Yarns</span>
-              <a href="rfproduct.html" class="menu-active">Reinforcement fabrics</a>
-              <a href="clfproduct.html">Coated and laminated fabrics</a>
-              <a href="syproduct.html">Spun yarn</a>
+              <a href="rfproduct.html" class="menu-active">Reinforcement Fabrics</a>
+              <a href="clfproduct.html">Coated and Laminated Fabrics</a>
+              <a href="syproduct.html">Spun Yarn</a>
             </div>
           </div> 
         </li>
@@ -70,13 +70,13 @@
             <a href="products.html" title="Products" data-ripple="" class="menu-active"> Products</a>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
-              <a href="cfcproduct.html">Carbon fiber composites</a>
-              <a href="cflproduct.html">Carbon fiber laminates</a>
-              <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
+              <a href="cfcproduct.html">Carbon Fiber Composites</a>
+              <a href="cflproduct.html">Carbon Fiber Laminates</a>
+              <a href="frpcproduct.html">Fiber Reinforced Polymer Composites</a>
               <span class="maintitle">Technical Fabrics & Yarns</span>
-              <a href="rfproduct.html" class="menu-active">Reinforcement fabrics</a>
-              <a href="clfproduct.html">Coated and laminated fabrics</a>
-              <a href="syproduct.html">Spun yarn</a>
+              <a href="rfproduct.html" class="menu-active">Reinforcement Fabrics</a>
+              <a href="clfproduct.html">Coated and Laminated Fabrics</a>
+              <a href="syproduct.html">Spun Yarn</a>
             </div>
             <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
           </div>
@@ -86,28 +86,28 @@
   </header><!-- #header -->
   <div class="productpagetitlebg">
       <img src="images/123.jpg">
-    <h1 class="centered">Reinforcement fabrics</h1>
+    <h1 class="centered">Reinforcement Fabrics</h1>
   </div>
   <div class="productpgsplit">
     <div class="sidebar-content">
       <span class="maintitle">Advanced Composites</span>
-      <a href="cfcproduct.html">Carbon fiber composites
+      <a href="cfcproduct.html">Carbon Fiber Composites
         <i class="fas fa-chevron-right"></i>
       </a>
-      <a href="cflproduct.html">Carbon fiber laminates
+      <a href="cflproduct.html">Carbon Fiber Laminates
         <i class="fas fa-chevron-right"></i>
       </a>
-      <a href="frpcproduct.html">Fiber reinforced polymer composites
+      <a href="frpcproduct.html">Fiber Reinforced Polymer Composites
         <i class="fas fa-chevron-right"></i>
       </a>
       <span class="maintitle">Technical Fabrics & Yarns</span>
-      <a href="rfproduct.html" class="menu-active">Reinforcement fabrics
+      <a href="rfproduct.html" class="menu-active">Reinforcement Fabrics
         <i class="fas fa-chevron-right"></i>
       </a>
-      <a href="clfproduct.html">Coated and laminated fabrics
+      <a href="clfproduct.html">Coated and Laminated Fabrics
         <i class="fas fa-chevron-right"></i>
       </a>
-      <a href="syproduct.html">Spun yarn
+      <a href="syproduct.html">Spun Yarn
         <i class="fas fa-chevron-right"></i>
       </a>
     </div>
