--- a/contactus.html
+++ b/contactus.html
@@ -50,13 +50,13 @@
             </button>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
-              <a href="cfcproduct.html">Carbon fiber composites</a>
-              <a href="cflproduct.html">Carbon fiber laminates</a>
-              <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
+              <a href="cfcproduct.html">Carbon Fiber Composites</a>
+              <a href="cflproduct.html">Carbon Fiber Laminates</a>
+              <a href="frpcproduct.html">Fiber Reinforced Polymer Composites</a>
               <span class="maintitle">Technical Fabrics & Yarns</span>
-              <a href="rfproduct.html">Reinforcement fabrics</a>
-              <a href="clfproduct.html">Coated and laminated fabrics</a>
-              <a href="syproduct.html">Spun yarn</a>
+              <a href="rfproduct.html">Reinforcement Fabrics</a>
+              <a href="clfproduct.html">Coated and Laminated Fabrics</a>
+              <a href="syproduct.html">Spun Yarn</a>
             </div>
           </div> 
         </li>
@@ -71,13 +71,13 @@
             <a href="products.html" title="Products" data-ripple="">Products</a>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
-              <a href="cfcproduct.html">Carbon fiber composites</a>
-              <a href="cflproduct.html">Carbon fiber laminates</a>
-              <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
+              <a href="cfcproduct.html">Carbon Fiber Composites</a>
+              <a href="cflproduct.html">Carbon Fiber Laminates</a>
+              <a href="frpcproduct.html">Fiber Reinforced Polymer Composites</a>
               <span class="maintitle">Technical Fabrics & Yarns</span>
-              <a href="rfproduct.html">Reinforcement fabrics</a>
-              <a href="clfproduct.html">Coated and laminated fabrics</a>
-              <a href="syproduct.html">Spun yarn</a>
+              <a href="rfproduct.html">Reinforcement Fabrics</a>
+              <a href="clfproduct.html">Coated and Laminated Fabrics</a>
+              <a href="syproduct.html">Spun Yarn</a>
             </div>
             <a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active"> Contact Us</a>
           </div>
